--- a/spring/.gitignore
+++ b/spring/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+./src/main/resources/custom.properties
+
 ### STS ###
 .apt_generated
 .classpath
