--- a/spring/.gitignore
+++ b/spring/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-./src/main/resources/custom.properties
+src/main/resources/custom.properties
 
 ### STS ###
 .apt_generated
